# VeilProtocol

./: .gitignore  Cargo.toml  README.md  deploy_program.sh  package.json
dark_sol/: Cargo.toml
docs/: veil_program.md  zk_proof.md
programs/DarkSol/: Cargo.toml
programs/DarkSol/src/: asset.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  merkle.rs  nullifier.rs  processor.rs  state.rs
programs/DarkSol/src/utils/: account.rs  mod.rs  serialize.rs
programs/verification/: .gitignore  Cargo.toml  package.json
programs/verification/circuit/: test.circom
programs/verification/circuit/artifacts/: proof.json  test.wasm
programs/verification/src/: lib.rs  utils.rs  verify_proof.rs  verifying_key.rs
programs/verification/tests/: test.ts
scripts/: test.sh
src/: asset.rs  entrypoint.rs  instruction.rs  lib.rs  merkle.rs  processor.rs  state.rs  util.rs
tests/: Cargo.toml
tests/mock-invoke/: Cargo.toml
tests/mock-invoke/src/: lib.rs
tests/src/: main.rs
tests/verification-test/: Cargo.toml
tests/verification-test/src/: main.rs  process.rs  util.rs
