[package]
name = "darksol"
version = "0.1.0"
edition = "2021"

[dependencies]

spl-associated-token-account = { git = "https://github.com/veil-protocol-privacy/associated-token-account"}
starknet-crypto = { git = "https://github.com/veil-protocol-privacy/starknet-rs", tag = "starknet-crypto/v0.7.4-solana" }
primitive-types = "0.12"
solana-program = "2.2.1"
solana-poseidon = "2.2.4"
spl-token = { version="8.0.0", features = [ "no-entrypoint" ] }

ark-std = "0.5"
ark-bn254 = "0.5"
ark-bls12-377 = "0.5"
ark-ff = "0.5.0"
ark-crypto-primitives = { version = "0.5", features = ["crh", "merkle_tree"] }
hex = "0.4"
ark-r1cs-std = "0.5.0"
sha3 = "0.10.8"
ethp = "0.1.0"
borsh = "1.5.5"
wasm-bindgen = "0.2.100"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
[lib]
crate-type = ["cdylib", "lib"]
