[package]
name = "darksol"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
spl-associated-token-account = { git = "https://github.com/solana-program/associated-token-account", rev = "5b18d35d817dc8fb9d91fed546ab2f9cbe369842", features = [
    "no-entrypoint",
] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
solana-program = "2.2.1"
solana-sha256-hasher = "2.2.1"

primitive-types = "0.12"

veil-types = { git = "https://github.com/veil-protocol-privacy/veil-core", package = "types" }

ark-std = "0.5"
ark-bn254 = "0.5"
ark-bls12-377 = "0.5"
ark-ff = "0.5.0"
ark-crypto-primitives = { version = "0.5", features = ["crh", "merkle_tree"] }
hex = "0.4"
ark-r1cs-std = "0.5.0"
sha3 = "0.10.8"
ethp = "0.1.0"
borsh = "1.5.5"
# wasm-bindgen = "0.2.100"
# serde = "1.0.219"
# serde-wasm-bindgen = "0.6.5"

# [dev-dependencies]
# tokio = { version = "1.44.2" }
# solana-program-test = { version = "2.2.7" }
# solana-sdk = { version = "2.2.2" }

[lib]
crate-type = ["cdylib", "lib"]
