[package]
name = "verification"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.1"
solana-program = "2.2.0"
groth16-solana = {git = "https://github.com/veil-protocol-privacy/groth16-solana"}
veil-types = { git = "https://github.com/veil-protocol-privacy/veil-core", package = "types" }
ark-ec = "0.3.0"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
ark-ff = "0.4.2"
sha2 = "0.10.8"
thiserror = "1.0.63"
hex = "0.4.3"

[dev-dependencies]
sp1-sdk = "4.0.0"