[package]
name = "verification-test"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "4.0.0"
solana-client = "2.2.7"
solana-program-test = "2.2.7"
solana-sdk = "2.2.2"
verification = { path = "../../programs/verification" }
veil-types = { git = "https://github.com/veil-protocol-privacy/veil-core", package = "types" }

anyhow = "1.0.98"
tokio = "1.44.2"
borsh = "1.5.1"
