[package]
name = "verification-test"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "4.0.0"
solana-client = "2.2.7"
solana-program = "2.2.1"
solana-sdk = "2.2.2"
verification = { path = "../../programs/verification", features = [
    "no-entrypoint",
] }
darksol = { path = "../../programs/DarkSol", features = [
    "no-entrypoint",
] }
veil-types = { git = "https://github.com/veil-protocol-privacy/veil-core", package = "types" }

anyhow = "1.0.98"
tokio = "1.44.2"
borsh = "1.5.1"
rand = "0.9.1"

spl-associated-token-account = { git = "https://github.com/solana-program/associated-token-account", rev = "1b1c0ebab3adaf57c0bca9c4a3522a76b9df632c", features = [
    "no-entrypoint",
] }
spl-token = { version = "8.0.0" }
base64 = "0.22.1"
